# functional-programming

./: .gitignore  .stylish-haskell.yaml  README.md  stack.yaml
hw0/: LICENSE  README.md  hw0.cabal
hw0/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs
hw1/: README.md  hw1.cabal
hw1/hw1_second_chance/src/Block6/: Task1.hs  Task2.hs  Task3.hs  Task4.hs
hw1/hw1_second_chance/test/Block6/: Task1Spec.hs  Task2Spec.hs  Task3Spec.hs  Task4Spec.hs  Utils.hs
hw1/src/: Lib.hs
hw1/src/Block1/: Task1.hs  Task2.hs  Task3.hs
hw1/src/Block2/: Task1.hs  Task2.hs
hw1/src/Block3/: Task1.hs  Task2.hs
hw1/src/Block4/: Task1.hs  Task2.hs  Task3.hs
hw1/src/Block5/: Task1.hs  Task2.hs
hw1/src/Block6/: Task1.hs  Task2.hs
hw1/src/Interblock/: NonEmpty.hs  Tree.hs
hw1/test/: Main.hs
hw1/test/Block1/: Task1Spec.hs  Task2Spec.hs  Task3Spec.hs
hw1/test/Block2/: Task1Prop.hs  Task2Spec.hs
hw1/test/Block3/: Task1Spec.hs  Task2Spec.hs
hw1/test/Block4/: Task1Spec.hs
hw1/test/Block5/: Task1Spec.hs
hw2/: .gitignore  LICENSE  README.md  hw2.cabal  package.yaml  stack.yaml
hw2/app/: Main.hs
hw2/src/: Commands.hs  FSError.hs  FileSystem.hs
hw2/src/Parser/: Combinators.hs  Parser.hs
hw2/test/: Main.hs  Spec.hs
hw3/: ChangeLog.md  README.md  hw3-doreshnikov.cabal  hw3.cabal  package.yaml  stack.yaml
hw3/app/: Main.hs
hw3/bench/: MainCrit.hs
hw3/bench/Task1/: Crit.hs
hw3/src/Task1/: Fast.hs  Naive.hs
hw3/src/Task2/: CHT.hs
hw3/src/Task567/: FileSystem.hs  Practice.hs  Visitors.hs
hw3/src/Task8/: Comonavid19.hs  Grid.hs
hw3/test/: MainSpec.hs
hw3/test/Task1/: GeometrySpec.hs
hw3/test/Task567/: FileSystemSpec.hs  VisitorsSpec.hs
hw4/: README.md  hw4.cabal
